--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-*{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+* {
     box-sizing: border-box;
     padding:0;
     margin:0;
@@ -7,16 +6,16 @@
 }
 
 nav {
-    text-align: right;
+    text-align:right;
     padding: 25px; 
 }
 
-ul li {
-    display:inline;
+li {
+    display: inline ;
 }
 
-body{
-    padding-top: 100px;
+body {
+    padding-top:80px;
 }
 
 header {
@@ -24,31 +23,15 @@ header {
     top:0;
     left:0;
     right:0;
-    bottom:0;
-    background-color: blue;
-    color: white; 
-  }
-  
-  .main-box {
-    box-sizing: 200px 200px;
-    padding: 10px;
-    background-color: brown;
+    background-color: rgb(0, 0, 255);
+    color: rgb(0, 0, 0); 
   }
 
-  .second-box {
-    border-color: pink;
-    border: 10px; 
+  #contact{
+    background-color:blue;
+    color: navajowhite;
   }
 
+  #contact form {
 
-  #item-1 {
-    background-color: red;
-  }
-  
-  #item-2 {
-    background-color: teal;
-  }
-  
-  #item-3 {
-    background-color: black;
   }
