--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ body {
     padding-top:80px;
 }
 
+main{
+    display:block;
+}
+
 header {
     position: fixed;
     top:0;
@@ -32,6 +36,9 @@ header {
     color: navajowhite;
   }
 
-  #contact form {
+  #contact-form {
+    Bottom:0;
+    Left:0;
+    right:0;
 
   }
